repl.it to replit.com

--- a/_docs/topics/7-pat1/pat1-10.md
+++ b/_docs/topics/7-pat1/pat1-10.md
@@ -9,7 +9,7 @@ This pattern isn't covered in Game Programming Patterns. Instead I'm linking to 
 
 
 
-[Code in replit](https://repl.it/@andyguest/pyFactoryMethod)  
+[Code in replit](https://replit.com/@andyguest/pyFactoryMethod)  
 
 >Factory Method is a Creational Design Pattern that allows an interface or a class to create an object, but let subclasses decide which class or object to instantiate. Using the Factory method, we have the best ways to create an object. Here, objects are created without exposing the logic to the client and for creating the new type of the object, the client uses the same common interface.
 
